# mcpox

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  rust-toolchain.toml  rustfmt-nightly.toml  rustfmt.toml
docs/: 2025-03-26-mcp-spec.mdx
mcpox/: Cargo.toml
mcpox-client/: Cargo.toml
mcpox-client/src/: error.rs  jsonrpc.rs  lib.rs  testing.rs  transport.rs
mcpox-client/src/transport/: child_process.rs
mcpox-core/: Cargo.toml  build.rs
mcpox-core/src/: lib.rs  models.rs
mcpox-jsonrpc/: ARCHITECTURE.md  Cargo.toml  README.md
mcpox-jsonrpc/examples/: echo.rs
mcpox-jsonrpc/src/: client.rs  error.rs  handler.rs  lib.rs  router.rs  sandbox.rs  server.rs  service.rs  service_connection.rs  testing.rs  transport.rs  typemap.rs  types.rs
mcpox-jsonrpc/src/service/: connection.rs  connection_handle.rs
mcpox-jsonrpc/testdata/: README.md  add_response.json  array_params_response.json  echo_response.json  internal_error_response.json  invalid_json_response.json  invalid_params_response.json  invalid_version_response.json  method_not_found_response.json  multiple_server_notification_1.json  multiple_server_notification_2.json  multiple_server_notification_3.json  multiple_server_notifications_response.json  no_params_response.json  null_id_response.json  numeric_id_response.json  object_params_response.json  parameterless_server_notification.json  parameterless_server_notification_response.json  single_server_notification.json  single_server_notification_response.json  string_id_response.json
mcpox-jsonrpc/tests/: compatibility.rs  integration.rs
mcpox-jsonrpc/tests/test_service/: mod.rs
mcpox-jsonrpc/tests/testdata/: batch_requests.yaml  countdown.yaml  duplicate_request_id.yaml  echo.yaml  empty_batch.yaml  errors.yaml  id_variations.yaml  invalid_json.yaml  invalid_requests.yaml  method_not_found.yaml  notification.yaml  notification_nonexistent.yaml  notifications_only_batch.yaml  param_structures.yaml  server_notifications.yaml
mcpox-macros/: Cargo.toml
mcpox-macros/src/: lib.rs
mcpox-server/: Cargo.toml
mcpox/src/: sandbox.rs
