[workspace]
members = [
    "mcpox-core",
    "mcpox-client",
    "mcpox-server",
    "mcpox-macros",
    "mcpox",
    "mcpox-jsonrpc",
]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Adam Nelson <anelson@nullpointer.net>"]
description = "Model Context Protocol, oxidized!"
repository = "https://github.com/anelson/mcpox"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
mcpox-core = { path = "mcpox-core" }
mcpox-server = { path = "mcpox-server" }
mcpox-client = { path = "mcpox-client" }
mcpox-jsonrpc = { path = "mcpox-jsonrpc" }
mcpox-macros = { path = "mcpox-macros" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.36", features = ["full"] }
thiserror = "2"
anyhow = "1"

# Proc-macro dependencies
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
