[workspace]
members = [
    "mcpox-core",
    "mcpox-client",
    "mcpox-server",
    "mcpox-macros",
    "mcpox",
    "mcpox-jsonrpc",
]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Adam Nelson <anelson@nullpointer.net>"]
description = "Model Context Protocol, oxidized!"
repository = "https://github.com/anelson/mcpox"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1.88"
jsonrpsee-types = "0.24.9"
mcpox-client = { path = "mcpox-client" }
mcpox-core = { path = "mcpox-core" }
mcpox-jsonrpc = { path = "mcpox-jsonrpc" }
mcpox-macros = { path = "mcpox-macros" }
mcpox-server = { path = "mcpox-server" }
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
syn = "2.0"
thiserror = "2"
tokio = { version = "1.36", features = ["full"] }
assert_matches = "1.5.0"
