[package]
name = "mcpox-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies can be inherited as needed
# Example:
# serde = { workspace = true }
# serde_json = { workspace = true }