[package]
name = "mcpox-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
prettyplease = { workspace = true }
schemars = { workspace = true }
serde_json.workspace = true
syn.workspace = true
typify = { workspace = true }

