[package]
name = "mcpox-jsonrpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
async-trait = { workspace = true }
jsonrpsee-types = { workspace = true }
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
thiserror.workspace = true

[dev-dependencies]
assert_matches = { workspace = true }
