[package]
name = "mcpox-jsonrpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
jsonrpsee-types = { workspace = true }
pin-project = { workspace = true }
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
thiserror.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v7"] }

[dev-dependencies]
assert_matches = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
serde_yaml = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
